// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sphere renders correctly when halved 1`] = `
<DocumentFragment>
  .cache-1fm8s8y {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  border-left: 16px solid #333;
  border-top: 16px solid #333;
  border-right: 16px solid #666;
  border-bottom: 16px solid #666;
  border-radius: 50%;
}

.cache-1fm8s8y.cache-1fm8s8y {
  width: 32px;
  height: 32px;
  position: relative;
}

<div
    class="eerihg01 cache-1fm8s8y e7ah3bn0"
  />
</DocumentFragment>
`;

exports[`Sphere renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-15o9th3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  border-left: 16px solid #4f0599;
  border-top: 16px solid #4f0599;
  border-right: 16px solid #4f0599;
  border-bottom: 16px solid #4f0599;
  border-radius: 50%;
}

.cache-15o9th3.cache-15o9th3 {
  width: 32px;
  height: 32px;
  position: relative;
}

<div
    class="eerihg01 cache-15o9th3 e7ah3bn0"
  />
</DocumentFragment>
`;

exports[`Sphere renders correctly with one char and smaller 1`] = `
<DocumentFragment>
  .cache-9rf6ki {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  border-left: 10px solid #000;
  border-top: 10px solid #000;
  border-right: 10px solid #000;
  border-bottom: 10px solid #000;
  border-radius: 50%;
}

.cache-9rf6ki.cache-9rf6ki {
  width: 20px;
  height: 20px;
  position: relative;
}

.cache-b2bnvq {
  color: #fff;
  font-size: 10px;
}

<div
    class="eerihg01 cache-9rf6ki e7ah3bn0"
  >
    <div
      class="cache-b2bnvq eerihg00"
    >
      ★
    </div>
  </div>
</DocumentFragment>
`;
